# esp32-cgm-scanner

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
components/cgm/: CMakeLists.txt  ble.cpp  ble.hpp  calculations.cpp  calculations.hpp  common.cpp  common.hpp  crc.cpp  crc.hpp  decrypt.cpp  decrypt.hpp  fram.cpp  fram.hpp  nfc.cpp  nfc.hpp  record.cpp  record.hpp  sensor.cpp  sensor.hpp  trend.cpp  trend.hpp  types.cpp  types.hpp
components/cgm/sensor/: factory_calibration.cpp  factory_calibration.hpp  sensor.cpp  sensor.hpp  sensor_family.cpp  sensor_family.hpp  sensor_region.cpp  sensor_region.hpp  sensor_serial.cpp  sensor_serial.hpp  sensor_state.cpp  sensor_state.hpp  sensor_types.cpp  sensor_types.hpp
components/cgm/test/: CMakeLists.txt  test.cgm.cpp
html/: annotated.html  ble_8hpp_source.html  ble__main_8hpp_source.html  calculations_8hpp_source.html  classcgm_1_1CGM__NFC-members.html  classcgm_1_1CGM__NFC.html  classcgm_1_1FactoryCalibration-members.html  classcgm_1_1FactoryCalibration.html  classcgm_1_1sensor-members.html  classcgm_1_1sensor.html  classes.html  common_8hpp_source.html  common__main_8hpp_source.html  crc_8hpp_source.html  decrypt_8hpp_source.html  dir_409f97388efe006bc3438b95e9edef48.html  dir_49d2707ebcd76ce25a5176f930875cad.html  dir_5c982d53a68cdbcd421152b4020263a9.html  dir_7208fcf517736d121ad50368d8f0896a.html  dir_f273b06a39ea74f006cf1a4a74ff66b6.html  display__utils_8hpp_source.html  factory__calibration_8hpp_source.html  files.html  fram_8hpp_source.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  nfc_8hpp_source.html  record_8hpp_source.html  sensor_8hpp_source.html  sensor__family_8hpp_source.html  sensor__region_8hpp_source.html  sensor__serial_8hpp_source.html  sensor__state_8hpp_source.html  sensor__types_8hpp_source.html  structble__main_1_1ble__client__ctx__t-members.html  structble__main_1_1ble__client__ctx__t.html  structcgm_1_1BLE__data-members.html  (+8 more)
main/: CMakeLists.txt  ble_main.cpp  ble_main.hpp  common_main.hpp  (+5 more)
(+28 files in other folders)
