idf_component_register(SRCS "decrypt.cpp"
                        "sensor/sensor_types.cpp"
                        "sensor/sensor_state.cpp"
                        "sensor/sensor_region.cpp"
                        "sensor/sensor_family.cpp"
                        "sensor/sensor_serial.cpp"
                        "sensor/sensor.cpp"
                        "nfc.cpp"
                        "crc.cpp"
                        "fram.cpp"
                        "record.cpp"
                    INCLUDE_DIRS "."
                    REQUIRES PN5180-Library)
